# personal-assistant

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  agent_tools.py  app.py  book_gym.py  example_scheduler_usage.py  gym_booking.py  interact_with_telegram.py  manage_db.py  minimal_telegram_browser_example.py  ptb_sqlite_jobstore.py  pyproject.toml  scheduler.py  schedules_store.py  send_user_message.py  task_handlers.py  task_store.py  test_chat_history.py  test_create_schedule.py  test_database.py  test_manage_db.py  test_reminders.py  test_scheduler.py  test_scheduler_init.py  test_schedules_store.py  test_task_store.py  timerbot_mongodb.py  timerbot_sqlite.py
ci/: deploy-image.sh
docs/: ENV_VARIABLES.md
docs/plans/: 2025-12-19-scheduler-design.md  2025-12-19-scheduler-implementation.md  2025-12-26-manage-db-design.md  2025-12-29-send-user-message-design.md  2026-01-13-calendar-event-tool-design.md  2026-01-13-calendar-event-tool-implementation.md
personal_assistant/: app.py  calendar.py  chat.py  cli.py  database.py  scheduler.py
terraform/: .gitignore  main.tf  outputs.tf  variables.tf
tests/: test_agent_tools.py  test_chat_history.py  test_cli.py  test_database.py  test_gym_booking.py  test_manage_db.py  test_scheduler_integration.py  test_task_handlers.py  test_task_store.py
tests/integration/: test_handle_message.py
tests/unit/: test_calendar.py  test_chat.py  test_chat_history.py  test_cli.py  test_database.py  test_scheduler.py
