[project]
name = "personal-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.0",
    "browser-use>=0.10.1",
    "croniter>=6.0.0",
    "langchain-openai>=0.2.0",
    "loguru>=0.7.0",
    "pydantic-ai>=1.38.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot[job-queue]>=22.5",
    "sqlalchemy>=2.0.0",
    "sqlitedict>=2.1.0",
]
