[project]
name = "personal-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.0",
    "browser-use[cli]==0.11.2",
    "croniter>=6.0.0",
    "langchain-openai>=0.2.0",
    "loguru>=0.7.0",
    "pydantic-ai>=1.38.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot[job-queue]>=22.5",
    "sqlalchemy>=2.0.0",
    "sqlitedict>=2.1.0",
    "typer>=0.15.1",
]

[project.scripts]
pa = "personal_assistant.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["personal_assistant*"]
exclude = ["terraform*", "tests*"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.11",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
# Enable import organization
select = ["I"]  # Enable isort rules

[tool.ruff.lint.isort]
# Group imports into sections
known-first-party = ["personal_assistant"]
# Separate imports into sections with blank lines
lines-after-imports = 2
